--- a/CommandInterpreterQt.ui
+++ b/CommandInterpreterQt.ui
@@ -19,6 +19,11 @@
      <layout class="QGridLayout" name="gridLayout_3">
       <item row="5" column="0">
        <widget class="QPushButton" name="pointButton">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Point</string>
         </property>
@@ -26,6 +31,11 @@
       </item>
       <item row="4" column="0">
        <widget class="QPushButton" name="moveButton">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Move</string>
         </property>
@@ -65,6 +75,11 @@ li.checked::marker { content: &quot;\2612&quot;; }
       </item>
       <item row="8" column="0">
        <widget class="QPushButton" name="planeButton">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Plane</string>
         </property>
@@ -72,6 +87,11 @@ li.checked::marker { content: &quot;\2612&quot;; }
       </item>
       <item row="2" column="3">
        <widget class="QPushButton" name="clearInputButton">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Clear</string>
         </property>
@@ -79,6 +99,11 @@ li.checked::marker { content: &quot;\2612&quot;; }
       </item>
       <item row="0" column="1">
        <widget class="QPushButton" name="debugButton">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Debug</string>
         </property>
@@ -86,6 +111,11 @@ li.checked::marker { content: &quot;\2612&quot;; }
       </item>
       <item row="6" column="0">
        <widget class="QPushButton" name="circleButton">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Circle</string>
         </property>
@@ -93,6 +123,11 @@ li.checked::marker { content: &quot;\2612&quot;; }
       </item>
       <item row="9" column="0">
        <widget class="QPushButton" name="projectionButton">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Projection</string>
         </property>
@@ -100,6 +135,11 @@ li.checked::marker { content: &quot;\2612&quot;; }
       </item>
       <item row="3" column="0">
        <widget class="QPushButton" name="commentButton">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Comment</string>
         </property>
@@ -107,6 +147,11 @@ li.checked::marker { content: &quot;\2612&quot;; }
       </item>
       <item row="0" column="4">
        <widget class="QPushButton" name="getReportButton">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Get report</string>
         </property>
@@ -116,7 +161,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <widget class="QPushButton" name="runButton">
         <property name="font">
          <font>
-          <pointsize>9</pointsize>
+          <pointsize>12</pointsize>
          </font>
         </property>
         <property name="styleSheet">
@@ -129,6 +174,11 @@ li.checked::marker { content: &quot;\2612&quot;; }
       </item>
       <item row="7" column="0">
        <widget class="QPushButton" name="centerButton">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Center</string>
         </property>
@@ -136,6 +186,11 @@ li.checked::marker { content: &quot;\2612&quot;; }
       </item>
       <item row="0" column="2">
        <widget class="QPushButton" name="saveFileButton">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Save file</string>
         </property>
@@ -145,7 +200,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <widget class="QLabel" name="label">
         <property name="font">
          <font>
-          <pointsize>12</pointsize>
+          <pointsize>14</pointsize>
           <bold>true</bold>
          </font>
         </property>
@@ -165,6 +220,11 @@ li.checked::marker { content: &quot;\2612&quot;; }
       </item>
       <item row="10" column="0">
        <widget class="QPushButton" name="deviationButton">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Deviation</string>
         </property>
@@ -172,6 +232,11 @@ li.checked::marker { content: &quot;\2612&quot;; }
       </item>
       <item row="0" column="3">
        <widget class="QPushButton" name="openFileButton">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Open file</string>
         </property>
@@ -205,7 +270,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <widget class="QLabel" name="label_2">
         <property name="font">
          <font>
-          <pointsize>12</pointsize>
+          <pointsize>14</pointsize>
           <bold>true</bold>
          </font>
         </property>
@@ -219,6 +284,11 @@ li.checked::marker { content: &quot;\2612&quot;; }
       </item>
       <item row="4" column="3">
        <widget class="QPushButton" name="clearOutputButton">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Clear</string>
         </property>
@@ -257,6 +327,11 @@ li.checked::marker { content: &quot;\2612&quot;; }
       </item>
       <item row="1" column="4">
        <widget class="QPushButton" name="pushButton_2">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Close</string>
         </property>
